# lib_mysqludf_preg

./: .gitignore  AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  README  README.md  config.h.in  config.h.in~  configure  configure.ac  from_php.c  from_php.h  ghfcns.c  ghfcns.h  ghmysql.c  ghmysql.h  installdb.sql  lib_mysqludf_preg_capture.c  lib_mysqludf_preg_check.c  lib_mysqludf_preg_info.c  lib_mysqludf_preg_position.c  lib_mysqludf_preg_replace.c  lib_mysqludf_preg_rlike.c  preg.c  preg.h  preg_utils.c  preg_utils.h  uninstalldb.sql
config/: ._ax_lib_mysql.m4  ax_lib_mysql.m4  ax_mysql_bin.m4  ax_pthread.m4  ax_pthread_np.m4  ghmysql.m4  pcre.m4
doc/: Doxyfile  INSTALL.windows  Makefile.am  Makefile.in  index.html  index.md  index.php.in  install.ubuntu  mainpage.c
doc/html/: index.html
test/: Makefile.am  Makefile.in  ManualTests.txt  create_testdb.sql  lib_mysqludf_preg_capture.result  lib_mysqludf_preg_capture.test  lib_mysqludf_preg_check.result  lib_mysqludf_preg_check.test  lib_mysqludf_preg_info.result  lib_mysqludf_preg_info.test  lib_mysqludf_preg_position.result  lib_mysqludf_preg_position.test  lib_mysqludf_preg_replace.result  lib_mysqludf_preg_replace.test  lib_mysqludf_preg_rlike.result  lib_mysqludf_preg_rlike.test
